syntax = "proto3";

package product;

import "google/protobuf/any.proto";
import "file.proto";

import "google/protobuf/timestamp.proto";

message Product {
    google.protobuf.Any id = 1;
    string category = 2;
    string product_name = 3;
    string description = 4;
    string brand = 5;
    string image_name = 6;
    int64 count_in_stock = 7;
    float price = 8;
    string currency = 9;
    string shop = 10;
    int64 rating = 11;
    bool is_featured = 12;
    google.protobuf.Timestamp updated_at = 13;
    google.protobuf.Timestamp created_at = 14;
}

message CreateProductRequest {
    string category = 1;
    string product_name = 2;
    string description = 3;
    string brand = 4;
    File image = 5;
    int64 count_in_stock = 6;
    float price = 7;
    string currency = 8;
    string shop = 9;
    int64 rating = 10;
    bool is_featured = 11;
}

message ProductResponse {
    Product product = 2;
}

message GetProductByIdRequest {
    string id = 1;
}

message GetProductsByShopRequest {
    string id = 1;
}

message GetProductsByShopResponse {
    repeated Product product = 1;
}

message UpdateProductRequest {
    string id = 1;
    optional string category = 2;
    optional string product_name = 3;
    optional string description = 4;
    optional string brand = 5;
    optional File image = 6;
    optional int64 count_in_stock = 7;
    optional float price = 8;
    optional string currency = 9;
    optional int64 rating = 10;
    optional bool is_featured = 11;
}

message DeleteProductRequest {
    string id = 1;
}

message EmptyRes {}

service ProductService {
    rpc AddProduct(CreateProductRequest) returns (ProductResponse) {}
    rpc GetProductByID(GetProductByIdRequest) returns (ProductResponse) {}
    rpc GetProductsByShop(GetProductsByShopRequest) returns (GetProductsByShopResponse) {}
    rpc UpdateProduct(UpdateProductRequest) returns (ProductResponse) {}
    rpc DeleteProduct(DeleteProductRequest) returns (EmptyRes) {}
}