syntax = "proto3";

package pb;

import "shop.proto";
import "file.proto";

message CreateShopRequest{
    string name = 1;
    string description = 2;
    string shopOwner = 3;
    File file = 4;
}

message CreateShopResponse{
    Shop shop = 1;
}